--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -1743,7 +1743,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y4Q-xQ-mas">
-                                                        <rect key="frame" x="34" y="6" width="90" height="36"/>
+                                                        <rect key="frame" x="34" y="4" width="90" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="90" id="Dxi-hi-x9t"/>
                                                         </constraints>
@@ -1756,7 +1756,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ofz-qE-mjI">
-                                                        <rect key="frame" x="140" y="4" width="120" height="36"/>
+                                                        <rect key="frame" x="140" y="4" width="120" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="120" id="N9O-hT-gBY"/>
                                                         </constraints>
@@ -1773,12 +1773,12 @@
                                                 <constraints>
                                                     <constraint firstItem="ofz-qE-mjI" firstAttribute="top" secondItem="hEU-eY-uAN" secondAttribute="top" constant="4" id="1Vb-72-Wlr"/>
                                                     <constraint firstItem="Y4Q-xQ-mas" firstAttribute="leading" secondItem="IGi-zB-WQx" secondAttribute="trailing" constant="10" id="C5h-ni-Wsx"/>
-                                                    <constraint firstItem="Y4Q-xQ-mas" firstAttribute="top" secondItem="hEU-eY-uAN" secondAttribute="top" constant="6" id="RSn-C9-Fo7"/>
+                                                    <constraint firstItem="Y4Q-xQ-mas" firstAttribute="top" secondItem="hEU-eY-uAN" secondAttribute="top" constant="4" id="RSn-C9-Fo7"/>
                                                     <constraint firstAttribute="height" constant="48" id="ZMY-du-hv4"/>
                                                     <constraint firstItem="IGi-zB-WQx" firstAttribute="top" secondItem="hEU-eY-uAN" secondAttribute="top" constant="12" id="ay2-Vo-1Ne"/>
                                                     <constraint firstItem="IGi-zB-WQx" firstAttribute="leading" secondItem="hEU-eY-uAN" secondAttribute="leading" id="izS-dm-nKI"/>
-                                                    <constraint firstAttribute="bottom" secondItem="ofz-qE-mjI" secondAttribute="bottom" constant="8" id="nad-D3-PHz"/>
-                                                    <constraint firstAttribute="bottom" secondItem="Y4Q-xQ-mas" secondAttribute="bottom" constant="6" id="pdF-C9-0dF"/>
+                                                    <constraint firstAttribute="bottom" secondItem="ofz-qE-mjI" secondAttribute="bottom" constant="4" id="nad-D3-PHz"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Y4Q-xQ-mas" secondAttribute="bottom" constant="4" id="pdF-C9-0dF"/>
                                                     <constraint firstItem="ofz-qE-mjI" firstAttribute="leading" secondItem="Y4Q-xQ-mas" secondAttribute="trailing" constant="16" id="wJC-hu-W9k"/>
                                                 </constraints>
                                             </view>
@@ -1892,7 +1892,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ulh-wj-cEi">
-                                                        <rect key="frame" x="34" y="7" width="180" height="34"/>
+                                                        <rect key="frame" x="34" y="4" width="180" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="180" id="Ch9-Db-fMQ"/>
                                                         </constraints>
@@ -1910,7 +1910,9 @@
                                                     <constraint firstAttribute="height" constant="48" id="ExX-ma-2RA"/>
                                                     <constraint firstItem="ulh-wj-cEi" firstAttribute="centerY" secondItem="W3O-NL-Poz" secondAttribute="centerY" id="KXn-uO-YEs"/>
                                                     <constraint firstItem="RhM-Zb-Oq1" firstAttribute="top" secondItem="W3O-NL-Poz" secondAttribute="top" constant="12" id="YOa-w4-jk2"/>
+                                                    <constraint firstAttribute="bottom" secondItem="ulh-wj-cEi" secondAttribute="bottom" constant="4" id="hHM-cK-SM3"/>
                                                     <constraint firstItem="RhM-Zb-Oq1" firstAttribute="leading" secondItem="W3O-NL-Poz" secondAttribute="leading" id="hSq-af-JiK"/>
+                                                    <constraint firstItem="ulh-wj-cEi" firstAttribute="top" secondItem="W3O-NL-Poz" secondAttribute="top" constant="4" id="muX-8n-xmp"/>
                                                     <constraint firstItem="ulh-wj-cEi" firstAttribute="leading" secondItem="RhM-Zb-Oq1" secondAttribute="trailing" constant="10" id="vIb-DP-5lR"/>
                                                 </constraints>
                                             </view>
@@ -2018,6 +2020,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H5y-Up-4eR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1620" y="78"/>
+        </scene>
+        <!--Home Page View Controller-->
+        <scene sceneID="ZkT-1a-ehd">
+            <objects>
+                <viewController storyboardIdentifier="HomePageViewController" id="3Hj-Vg-wHe" customClass="HomePageViewController" customModule="AI_MUNJANG" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WPv-v2-4xo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0js-UK-TwY">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Axc-yL-zUp">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="ZVY-Uf-Upm"/>
+                                    <constraint firstAttribute="height" constant="20" id="ZYK-mz-l7n"/>
+                                </constraints>
+                            </activityIndicatorView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="GgE-BS-d1s"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="0js-UK-TwY" secondAttribute="bottom" id="E7g-bC-hZA"/>
+                            <constraint firstItem="0js-UK-TwY" firstAttribute="top" secondItem="WPv-v2-4xo" secondAttribute="top" id="H7v-Mo-eab"/>
+                            <constraint firstItem="0js-UK-TwY" firstAttribute="trailing" secondItem="GgE-BS-d1s" secondAttribute="trailing" id="HfQ-h1-ef1"/>
+                            <constraint firstItem="0js-UK-TwY" firstAttribute="leading" secondItem="GgE-BS-d1s" secondAttribute="leading" id="KNP-9E-Mz0"/>
+                            <constraint firstItem="Axc-yL-zUp" firstAttribute="centerY" secondItem="WPv-v2-4xo" secondAttribute="centerY" id="XQu-B2-bcc"/>
+                            <constraint firstItem="Axc-yL-zUp" firstAttribute="centerX" secondItem="WPv-v2-4xo" secondAttribute="centerX" id="pMp-xs-qeI"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="indicator" destination="Axc-yL-zUp" id="5pL-CZ-eBg"/>
+                        <outlet property="webView" destination="0js-UK-TwY" id="byq-gi-ZfB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cJb-fh-qAN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1402.8985507246377" y="-1281.0267857142856"/>
         </scene>
     </scenes>
     <resources>
