--- a/AI_MUNJANG/Base.lproj/LaunchScreen.storyboard
+++ b/AI_MUNJANG/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,21 +16,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="seogamdo_logo" translatesAutoresizingMaskIntoConstraints="NO" id="OCx-EA-uNM">
-                                <rect key="frame" x="132.5" y="373.5" width="149" height="149"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="group" translatesAutoresizingMaskIntoConstraints="NO" id="ND5-Lt-bLg">
+                                <rect key="frame" x="120" y="390" width="174" height="116"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="OCx-EA-uNM" secondAttribute="height" id="2SS-vO-H2e"/>
+                                    <constraint firstAttribute="width" secondItem="ND5-Lt-bLg" secondAttribute="height" multiplier="3:2" id="eBU-1L-Ab9"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.015686274509803921" green="0.74901960784313726" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="OCx-EA-uNM" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="IO2-Uq-Jjt"/>
-                            <constraint firstItem="OCx-EA-uNM" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.36" id="VNj-Ap-o4w"/>
-                            <constraint firstItem="OCx-EA-uNM" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="X5z-vE-YRc"/>
-                            <constraint firstItem="OCx-EA-uNM" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bIg-1K-lcy"/>
-                            <constraint firstItem="OCx-EA-uNM" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="tWh-gy-jYU"/>
+                            <constraint firstItem="ND5-Lt-bLg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="120" id="kTh-54-1nU"/>
+                            <constraint firstItem="ND5-Lt-bLg" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oSa-YH-bko"/>
+                            <constraint firstItem="ND5-Lt-bLg" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qnm-zd-bLv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ND5-Lt-bLg" secondAttribute="trailing" constant="120" id="zbO-ts-c2n"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -41,9 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="seogamdo_logo" width="770" height="794"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="group" width="149" height="102"/>
     </resources>
 </document>
