--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -552,7 +552,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bKJ-Ya-Img">
-                                <rect key="frame" x="69" y="277.5" width="276" height="341.5"/>
+                                <rect key="frame" x="69" y="318" width="276" height="260"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S04-zw-TMO">
                                         <rect key="frame" x="0.0" y="0.0" width="276" height="50"/>
@@ -573,14 +573,14 @@
                                             <constraint firstItem="ZVU-H7-bPq" firstAttribute="leading" secondItem="S04-zw-TMO" secondAttribute="leading" constant="16" id="l0C-Ha-Cqn"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="코로나바이러스감염증-19가 유행하기 시작하면서 포털사이트에는 ‘음성 양성 뜻’이라는 검색어가 오르내렸다." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rn-yI-7GB">
-                                        <rect key="frame" x="16" y="66" width="244" height="81.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rn-yI-7GB">
+                                        <rect key="frame" x="16" y="66" width="244" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="7Ak-6c-1GJ">
-                                        <rect key="frame" x="16" y="163.5" width="244" height="104"/>
+                                        <rect key="frame" x="16" y="82" width="244" height="104"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3It-Vf-w23">
                                                 <rect key="frame" x="0.0" y="0.0" width="244" height="50"/>
@@ -614,7 +614,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Jc9-NG-Uff">
-                                        <rect key="frame" x="16" y="283.5" width="244" height="50"/>
+                                        <rect key="frame" x="16" y="202" width="244" height="50"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDz-M7-r10">
                                                 <rect key="frame" x="0.0" y="0.0" width="114" height="50"/>
@@ -2033,13 +2033,6 @@
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Axc-yL-zUp">
-                                <rect key="frame" x="197" y="438" width="20" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="ZVY-Uf-Upm"/>
-                                    <constraint firstAttribute="height" constant="20" id="ZYK-mz-l7n"/>
-                                </constraints>
-                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="GgE-BS-d1s"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -2048,12 +2041,9 @@
                             <constraint firstItem="0js-UK-TwY" firstAttribute="top" secondItem="WPv-v2-4xo" secondAttribute="top" id="H7v-Mo-eab"/>
                             <constraint firstItem="0js-UK-TwY" firstAttribute="trailing" secondItem="GgE-BS-d1s" secondAttribute="trailing" id="HfQ-h1-ef1"/>
                             <constraint firstItem="0js-UK-TwY" firstAttribute="leading" secondItem="GgE-BS-d1s" secondAttribute="leading" id="KNP-9E-Mz0"/>
-                            <constraint firstItem="Axc-yL-zUp" firstAttribute="centerY" secondItem="WPv-v2-4xo" secondAttribute="centerY" id="XQu-B2-bcc"/>
-                            <constraint firstItem="Axc-yL-zUp" firstAttribute="centerX" secondItem="WPv-v2-4xo" secondAttribute="centerX" id="pMp-xs-qeI"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="indicator" destination="Axc-yL-zUp" id="5pL-CZ-eBg"/>
                         <outlet property="webView" destination="0js-UK-TwY" id="byq-gi-ZfB"/>
                     </connections>
                 </viewController>
