--- a/AI_MUNJANG/CustomPasswordView.xib
+++ b/AI_MUNJANG/CustomPasswordView.xib
@@ -9,11 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="NanumSquareOTF_acB.otf">
-            <string>NanumSquareOTF_acB</string>
-        </array>
         <array key="NanumSquareOTF_acR.otf">
             <string>NanumSquareOTF_acR</string>
+        </array>
+        <array key="NanumSquareR.ttf">
+            <string>NanumSquareR</string>
         </array>
     </customFonts>
     <objects>
@@ -35,7 +35,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="ctD-7i-uqm"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="NanumSquareOTF_acB" family="NanumSquareOTF_ac" pointSize="17"/>
+                    <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="13"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
