--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -178,38 +178,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="모두의 문해력" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HgL-YY-bUx">
-                                <rect key="frame" x="0.0" y="104" width="414" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="v6a-Yi-fER"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="24"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSU-XL-TsV" customClass="CustomEmailView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="24" y="174" width="366" height="100"/>
+                                <rect key="frame" x="24" y="218" width="366" height="100"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="aio-uC-pJn"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0hA-df-zY3" customClass="CustomPasswordView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="24" y="282" width="366" height="100"/>
+                                <rect key="frame" x="24" y="326" width="366" height="100"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="OOB-ar-aze"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pdB-pP-6Se" customClass="CustomButtonView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="24" y="382" width="366" height="52"/>
+                                <rect key="frame" x="24" y="426" width="366" height="56"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="52" id="QRz-9C-s2Q"/>
+                                    <constraint firstAttribute="height" constant="56" id="QRz-9C-s2Q"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="5eZ-To-dZd">
-                                <rect key="frame" x="24" y="458" width="366" height="24"/>
+                                <rect key="frame" x="24" y="506" width="366" height="24"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w6V-CZ-5WX">
                                         <rect key="frame" x="0.0" y="0.0" width="181" height="24"/>
@@ -283,24 +274,24 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0JX-AC-h0A">
-                                <rect key="frame" x="24" y="532" width="366" height="72"/>
+                                <rect key="frame" x="24" y="570" width="366" height="76"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- 소셜로그인 -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6D7-gC-42A">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소셜계정으로 이용하기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6D7-gC-42A">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="12"/>
-                                        <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="14"/>
-                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="15"/>
+                                        <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f0o-Ot-9e8" customClass="CustomButtonView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="20" width="366" height="52"/>
+                                        <rect key="frame" x="0.0" y="20" width="366" height="56"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="52" id="B8n-iH-IM9"/>
+                                            <constraint firstAttribute="height" constant="56" id="B8n-iH-IM9"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="luJ-2p-H5y"/>
+                                    <constraint firstAttribute="height" constant="76" id="luJ-2p-H5y"/>
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="jqd-zy-sHn">
@@ -309,7 +300,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c30-xf-1sD">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="56"/>
                                         <color key="backgroundColor" systemColor="systemYellowColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="17"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="둘러보기">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -324,10 +315,18 @@
                                     <constraint firstAttribute="height" constant="56" id="PBg-wy-DVK"/>
                                 </constraints>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="group" translatesAutoresizingMaskIntoConstraints="NO" id="gpK-tt-1xT">
+                                <rect key="frame" x="20" y="118" width="374" height="80"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="zCv-HW-7PF"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="k8y-Yw-4jx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="gpK-tt-1xT" secondAttribute="trailing" constant="20" id="0Wd-G5-UHm"/>
                             <constraint firstItem="5eZ-To-dZd" firstAttribute="leading" secondItem="k8y-Yw-4jx" secondAttribute="leading" constant="24" id="2I8-ZJ-fOD"/>
                             <constraint firstAttribute="bottom" secondItem="jqd-zy-sHn" secondAttribute="bottom" constant="24" id="2ru-jQ-UXc"/>
                             <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="0JX-AC-h0A" secondAttribute="trailing" constant="24" id="4Im-Ya-94s"/>
@@ -335,21 +334,21 @@
                             <constraint firstItem="jqd-zy-sHn" firstAttribute="leading" secondItem="k8y-Yw-4jx" secondAttribute="leading" constant="20" id="9mN-ni-TF2"/>
                             <constraint firstItem="0hA-df-zY3" firstAttribute="top" secondItem="PSU-XL-TsV" secondAttribute="bottom" constant="8" id="ACZ-51-HTd"/>
                             <constraint firstItem="pdB-pP-6Se" firstAttribute="top" secondItem="0hA-df-zY3" secondAttribute="bottom" id="B3q-Ix-2a7"/>
-                            <constraint firstItem="HgL-YY-bUx" firstAttribute="top" secondItem="k8y-Yw-4jx" secondAttribute="top" constant="16" id="PZe-yB-AwE"/>
+                            <constraint firstItem="PSU-XL-TsV" firstAttribute="top" secondItem="gpK-tt-1xT" secondAttribute="bottom" constant="20" id="IWs-MS-Huz"/>
+                            <constraint firstItem="gpK-tt-1xT" firstAttribute="centerX" secondItem="ALw-u5-FSU" secondAttribute="centerX" id="SYX-VA-kT1"/>
                             <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="PSU-XL-TsV" secondAttribute="trailing" constant="24" id="UUY-qB-MQV"/>
                             <constraint firstItem="5eZ-To-dZd" firstAttribute="top" secondItem="pdB-pP-6Se" secondAttribute="bottom" constant="24" id="Wcn-05-9Mr"/>
                             <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="0hA-df-zY3" secondAttribute="trailing" constant="24" id="Xf2-Um-Cb1"/>
                             <constraint firstItem="5eZ-To-dZd" firstAttribute="centerX" secondItem="ALw-u5-FSU" secondAttribute="centerX" id="Yof-iO-1CB"/>
                             <constraint firstItem="0hA-df-zY3" firstAttribute="leading" secondItem="k8y-Yw-4jx" secondAttribute="leading" constant="24" id="ah8-QQ-2Hw"/>
-                            <constraint firstItem="PSU-XL-TsV" firstAttribute="top" secondItem="HgL-YY-bUx" secondAttribute="bottom" constant="20" id="dsX-Wd-S6Y"/>
                             <constraint firstItem="pdB-pP-6Se" firstAttribute="leading" secondItem="k8y-Yw-4jx" secondAttribute="leading" constant="24" id="e62-MP-9XM"/>
-                            <constraint firstItem="0JX-AC-h0A" firstAttribute="top" secondItem="5eZ-To-dZd" secondAttribute="bottom" constant="50" id="gLV-U7-kQv"/>
+                            <constraint firstItem="0JX-AC-h0A" firstAttribute="top" secondItem="5eZ-To-dZd" secondAttribute="bottom" constant="40" id="gLV-U7-kQv"/>
                             <constraint firstItem="0JX-AC-h0A" firstAttribute="leading" secondItem="k8y-Yw-4jx" secondAttribute="leading" constant="24" id="iZg-SC-NCr"/>
+                            <constraint firstItem="gpK-tt-1xT" firstAttribute="top" secondItem="k8y-Yw-4jx" secondAttribute="top" constant="30" id="nYn-GA-7jb"/>
                             <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="pdB-pP-6Se" secondAttribute="trailing" constant="24" id="o5g-oH-vDE"/>
-                            <constraint firstItem="HgL-YY-bUx" firstAttribute="leading" secondItem="k8y-Yw-4jx" secondAttribute="leading" id="pjo-bs-Bql"/>
                             <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="5eZ-To-dZd" secondAttribute="trailing" constant="24" id="rQo-PM-13m"/>
                             <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="jqd-zy-sHn" secondAttribute="trailing" constant="20" id="rmk-st-fuf"/>
-                            <constraint firstItem="k8y-Yw-4jx" firstAttribute="trailing" secondItem="HgL-YY-bUx" secondAttribute="trailing" id="xMp-jO-4nj"/>
+                            <constraint firstItem="gpK-tt-1xT" firstAttribute="leading" secondItem="k8y-Yw-4jx" secondAttribute="leading" constant="20" id="vc5-B1-Zbc"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dnR-wm-wnR"/>
@@ -357,6 +356,7 @@
                         <outlet property="appleLoginButtonView" destination="f0o-Ot-9e8" id="LRS-FJ-1SP"/>
                         <outlet property="emailContainerView" destination="PSU-XL-TsV" id="x91-LQ-B9u"/>
                         <outlet property="loginButtonView" destination="pdB-pP-6Se" id="dWi-3H-H0F"/>
+                        <outlet property="logoimag" destination="gpK-tt-1xT" id="N4r-jR-YLM"/>
                         <outlet property="onlyTourButton" destination="c30-xf-1sD" id="kjE-MX-U2a"/>
                         <outlet property="passwordContainerView" destination="0hA-df-zY3" id="fSX-fV-15D"/>
                         <outlet property="searchPasswordButton" destination="w6V-CZ-5WX" id="0PS-VU-KMU"/>
@@ -2053,6 +2053,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="group" width="149" height="102"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="icArrowLeft32Px" width="32" height="32"/>
         <image name="icCustomerService24Px" width="24" height="24"/>
