--- a/AI_MUNJANG/CustomButtonView.xib
+++ b/AI_MUNJANG/CustomButtonView.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -27,7 +26,7 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NcH-qC-nW7">
                     <rect key="frame" x="0.0" y="0.0" width="290" height="55"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="18"/>
+                    <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="17"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <connections>
                         <action selector="clickedButton:" destination="-1" eventType="touchUpInside" id="cgP-jX-hg8"/>
@@ -35,7 +34,7 @@
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="86A-UM-72S"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="NcH-qC-nW7" firstAttribute="leading" secondItem="86A-UM-72S" secondAttribute="leading" id="9ES-Dh-bea"/>
                 <constraint firstItem="NcH-qC-nW7" firstAttribute="top" secondItem="C9p-TI-Fyu" secondAttribute="top" id="GHL-Fn-3aL"/>
@@ -46,9 +45,4 @@
             <point key="canvasLocation" x="356.52173913043481" y="-528.01339285714289"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
