--- a/AI_MUNJANG/CustomPasswordView.xib
+++ b/AI_MUNJANG/CustomPasswordView.xib
@@ -68,7 +68,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bv-uE-BN5">
-                    <rect key="frame" x="8" y="52" width="356" height="34"/>
+                    <rect key="frame" x="8" y="36" width="356" height="50"/>
                     <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="14"/>
                     <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -85,7 +85,7 @@
                 <constraint firstItem="9Bc-2r-Md4" firstAttribute="bottom" secondItem="8bv-uE-BN5" secondAttribute="bottom" id="R9w-O9-LBT"/>
                 <constraint firstItem="mGy-Pw-0YC" firstAttribute="top" secondItem="eKU-6L-dBH" secondAttribute="top" id="T2T-7y-hqr"/>
                 <constraint firstItem="mGy-Pw-0YC" firstAttribute="leading" secondItem="eKU-6L-dBH" secondAttribute="leading" constant="8" id="emq-0T-zyy"/>
-                <constraint firstItem="8bv-uE-BN5" firstAttribute="top" secondItem="Vro-4W-0gZ" secondAttribute="bottom" id="gEn-uO-cme"/>
+                <constraint firstItem="8bv-uE-BN5" firstAttribute="top" secondItem="Vro-4W-0gZ" secondAttribute="bottom" constant="-16" id="gEn-uO-cme"/>
                 <constraint firstAttribute="trailing" secondItem="mGy-Pw-0YC" secondAttribute="trailing" constant="20" id="ikm-ez-sIr"/>
                 <constraint firstItem="Vro-4W-0gZ" firstAttribute="trailing" secondItem="9Bc-2r-Md4" secondAttribute="trailing" id="yzl-wZ-WSU"/>
             </constraints>
