--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -232,7 +232,7 @@
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
-                                            <color key="baseForegroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="baseForegroundColor" red="0.36862745098039218" green="0.36862745098039218" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="searchPasswordButton:" destination="9dr-vi-YH9" eventType="touchUpInside" id="w9E-cj-4OH"/>
@@ -693,7 +693,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="가입을 위해 약관 동의가 필요합니다." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiC-rN-cp7">
-                                <rect key="frame" x="24" y="84" width="366" height="40"/>
+                                <rect key="frame" x="24" y="76" width="366" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="LfR-ga-wFc"/>
                                 </constraints>
@@ -702,67 +702,67 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14세 미만인 경우 보호자가 진행해주세요." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ah4-7b-yvc">
-                                <rect key="frame" x="24" y="124" width="366" height="30"/>
+                                <rect key="frame" x="24" y="116" width="366" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="cHW-rm-P9O"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="16"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="15"/>
+                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4dG-C2-jnj" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="178" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="170" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemMintColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="eXy-Rk-Gda"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uBG-bH-Onc" userLabel="border">
-                                <rect key="frame" x="24" y="222" width="366" height="1"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="24" y="214" width="366" height="1"/>
+                                <color key="backgroundColor" red="0.87058823529411766" green="0.87058823529411766" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="nZd-cf-fhM"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aeu-7z-xr4" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="231" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="223" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemBrownColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Qg1-3W-yl2"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zPm-ke-7DY" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="279" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="271" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="wlp-eG-xfN"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eje-Ur-NY0" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="327" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="319" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="15b-3l-7RF"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mhI-HQ-Syw" customClass="CustomCheckBoxLabel" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="375" width="414" height="40"/>
+                                <rect key="frame" x="0.0" y="367" width="414" height="40"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="gg9-tK-g4j"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="가입을 위한 필수 항목에 동의해주세요" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKh-qI-tCL">
-                                <rect key="frame" x="24" y="423" width="366" height="40"/>
+                                <rect key="frame" x="24" y="415" width="366" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="uYB-dy-uer"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="NanumSquareB" family="NanumSquare" pointSize="15"/>
-                                <color key="textColor" red="1" green="0.37327274659863946" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.94117647058823528" green="0.090196078431372548" blue="0.090196078431372548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gFQ-uM-2z4" customClass="CustomButtonView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="24" y="487" width="366" height="52"/>
+                                <rect key="frame" x="24" y="479" width="366" height="52"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="d36-Ez-2ro"/>
@@ -779,7 +779,7 @@
                             <constraint firstItem="rW4-JZ-CAQ" firstAttribute="trailing" secondItem="uBG-bH-Onc" secondAttribute="trailing" constant="24" id="3Mz-kO-jdS"/>
                             <constraint firstItem="gFQ-uM-2z4" firstAttribute="leading" secondItem="rW4-JZ-CAQ" secondAttribute="leading" constant="24" id="46h-rb-oE3"/>
                             <constraint firstItem="mhI-HQ-Syw" firstAttribute="leading" secondItem="rW4-JZ-CAQ" secondAttribute="leading" id="5MC-3U-fys"/>
-                            <constraint firstItem="QiC-rN-cp7" firstAttribute="top" secondItem="rW4-JZ-CAQ" secondAttribute="top" constant="40" id="C8w-nd-kYk"/>
+                            <constraint firstItem="QiC-rN-cp7" firstAttribute="top" secondItem="rW4-JZ-CAQ" secondAttribute="top" constant="32" id="C8w-nd-kYk"/>
                             <constraint firstItem="4dG-C2-jnj" firstAttribute="leading" secondItem="rW4-JZ-CAQ" secondAttribute="leading" id="CF1-HA-soL"/>
                             <constraint firstItem="QiC-rN-cp7" firstAttribute="leading" secondItem="rW4-JZ-CAQ" secondAttribute="leading" constant="24" id="Ck3-RP-lBP"/>
                             <constraint firstItem="TKh-qI-tCL" firstAttribute="leading" secondItem="rW4-JZ-CAQ" secondAttribute="leading" constant="24" id="Crq-fm-nAD"/>
@@ -810,6 +810,7 @@
                         <outlet property="marketingInfoCheckLabel" destination="mhI-HQ-Syw" id="Gjk-1Y-4CI"/>
                         <outlet property="nextButton" destination="gFQ-uM-2z4" id="Qat-a2-qy5"/>
                         <outlet property="personalInfoCheckLabel" destination="zPm-ke-7DY" id="oBl-w4-L4G"/>
+                        <outlet property="termsMaintitle" destination="QiC-rN-cp7" id="Qc7-XO-dBv"/>
                         <outlet property="useTermsCheckLabel" destination="aeu-7z-xr4" id="5BE-3v-0Uf"/>
                     </connections>
                 </viewController>
@@ -951,27 +952,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OC6-sy-jk2" customClass="CustomEmailView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="24" y="94" width="366" height="100"/>
+                                <rect key="frame" x="24" y="116" width="366" height="100"/>
                                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="ucf-9T-eT5"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bbf-Ln-WpC" customClass="CustomButtonView" customModule="AI_MUNJANG" customModuleProvider="target">
-                                <rect key="frame" x="24" y="218" width="366" height="52"/>
+                                <rect key="frame" x="24" y="240" width="366" height="52"/>
                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="UlC-Y7-5Ya"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="가입한 이메일 주소를 입력해주세요." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FHb-H4-FQU">
+                                <rect key="frame" x="20" y="76" width="374" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="ZWd-Ui-xnQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="icI-Gw-Fbb"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="OC6-sy-jk2" firstAttribute="top" secondItem="icI-Gw-Fbb" secondAttribute="top" constant="50" id="AaX-pP-dlb"/>
+                            <constraint firstItem="OC6-sy-jk2" firstAttribute="top" secondItem="FHb-H4-FQU" secondAttribute="bottom" constant="8" id="3dv-FO-ljk"/>
+                            <constraint firstItem="FHb-H4-FQU" firstAttribute="top" secondItem="icI-Gw-Fbb" secondAttribute="top" constant="32" id="5tB-pE-nqK"/>
                             <constraint firstItem="icI-Gw-Fbb" firstAttribute="trailing" secondItem="OC6-sy-jk2" secondAttribute="trailing" constant="24" id="Gfu-Hc-lOQ"/>
+                            <constraint firstItem="icI-Gw-Fbb" firstAttribute="trailing" secondItem="FHb-H4-FQU" secondAttribute="trailing" constant="20" id="Gme-Kq-PBb"/>
                             <constraint firstItem="icI-Gw-Fbb" firstAttribute="trailing" secondItem="bbf-Ln-WpC" secondAttribute="trailing" constant="24" id="bSZ-AV-erv"/>
+                            <constraint firstItem="FHb-H4-FQU" firstAttribute="leading" secondItem="icI-Gw-Fbb" secondAttribute="leading" constant="20" id="i0p-To-uPe"/>
                             <constraint firstItem="OC6-sy-jk2" firstAttribute="leading" secondItem="icI-Gw-Fbb" secondAttribute="leading" constant="24" id="lHm-X7-aDb"/>
                             <constraint firstItem="bbf-Ln-WpC" firstAttribute="leading" secondItem="icI-Gw-Fbb" secondAttribute="leading" constant="24" id="owW-Js-QQW"/>
                             <constraint firstItem="bbf-Ln-WpC" firstAttribute="top" secondItem="OC6-sy-jk2" secondAttribute="bottom" constant="24" id="xx1-U9-N5W"/>
@@ -983,6 +996,7 @@
                     <connections>
                         <outlet property="authenticateButtonView" destination="bbf-Ln-WpC" id="wHN-x9-Yeg"/>
                         <outlet property="emailView" destination="OC6-sy-jk2" id="FCl-Ct-FZP"/>
+                        <outlet property="guideTitle" destination="FHb-H4-FQU" id="1FP-Mq-sE0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y7h-ep-9iR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
