--- a/AI_MUNJANG/CustomEmailView.xib
+++ b/AI_MUNJANG/CustomEmailView.xib
@@ -68,7 +68,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Idr-0k-ZtE">
-                    <rect key="frame" x="4" y="52" width="360" height="34"/>
+                    <rect key="frame" x="4" y="36" width="360" height="50"/>
                     <fontDescription key="fontDescription" name="NanumSquareOTF_acR" family="NanumSquareOTF_ac" pointSize="14"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -82,7 +82,7 @@
                 <constraint firstAttribute="trailing" secondItem="tJe-TH-8kr" secondAttribute="trailing" constant="20" id="Mp8-jT-av4"/>
                 <constraint firstItem="tJe-TH-8kr" firstAttribute="top" secondItem="XGY-Yu-6Cd" secondAttribute="top" id="SRN-89-6CH"/>
                 <constraint firstItem="aaw-PG-wd5" firstAttribute="top" secondItem="tJe-TH-8kr" secondAttribute="bottom" id="WaV-6W-H56"/>
-                <constraint firstItem="Idr-0k-ZtE" firstAttribute="top" secondItem="aaw-PG-wd5" secondAttribute="bottom" id="a09-eJ-Xuy"/>
+                <constraint firstItem="Idr-0k-ZtE" firstAttribute="top" secondItem="aaw-PG-wd5" secondAttribute="bottom" constant="-16" id="a09-eJ-Xuy"/>
                 <constraint firstItem="Idr-0k-ZtE" firstAttribute="leading" secondItem="U7f-ZY-MQG" secondAttribute="leading" constant="4" id="c52-0T-ETs"/>
                 <constraint firstItem="aaw-PG-wd5" firstAttribute="height" secondItem="XGY-Yu-6Cd" secondAttribute="height" multiplier="0.36" id="gBF-yZ-a4G"/>
                 <constraint firstItem="U7f-ZY-MQG" firstAttribute="trailing" secondItem="Idr-0k-ZtE" secondAttribute="trailing" id="i4z-wf-Wsg"/>
